Resources command and TUI improvements